magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/form.scss
@charset "UTF-8";

@mixin form {

.form-panel {
    margin:0 auto;
    padding:0;
    width:720px;
    max-width:100%;
}

.form-content {
  overflow:hidden;
  transition-property:height;
  transition-duration:1s;
}

.form-content .v-shell-tabsheet-scroller {
  position:static !important;
  max-height:450px;
}
.tablet .form-content .v-shell-tabsheet-scroller {max-height:385px;} /* Ensure form footer is visible on the iPad */

.form-error {padding:10px 16px 10px 16px;}

.form-error {margin-top:2px;}

/*
* Tabsheet color
*/
.form-panel .v-shell-tabsheet {
    background-color: $c16;
}

.form-panel .v-shell-tabsheet .nav li.active {
    background-color: $c16;
}

.v-form-layout {
    overflow-x: hidden;
    background-color: $c16;
    margin-top:25px;
    width: 100%;
}

.v-form-field-label,
.validation-message-inline,
.help-message-inline {
  font-size: 12px;
}

.v-form-layout .v-form-field {
    display: inline-block;
    vertical-align: middle;
}
.v-form-layout .v-form-field.textcodefield {
  height : 200px;
}

.form-error {
    background-color:$c70;
    color:$c80;
}

.form-help {
    float: right;
    margin-right: 0px;
}

button.btn-form-select {
    margin-left: 2px;
}

button.btn-form-help {
    background: url("img/icon-help.png") no-repeat scroll center center transparent;
    border: none;
    float: right;
    height: 18px;
    margin: 0;
    padding: 0;
    width: 18px;
    position: relative;
    top: -1px;

    &:focus{
      outline: $c22 solid 2px;
    }
    &::-moz-focus-inner {
      border: 0;
  }
}

  .help-icon {
    position: absolute;
    line-height: 1;
    margin-top: -1px;
  }

  .help-icon .icon-help-l {
    color: $c12;
    font-size: 28px;
  }


  .help-icon.highlighted .icon-shape-circle-plus, .help-icon.highlighted .icon-help-mark {
    color: $c80;
    font-size: 28px;
  }

  .icon.help-icon.highlighted .icon-shape-circle {
    color: $c20;
    font-size: 28px;
  }


.form-panel .field-container {
    color: $c12;
}

.v-customcomponent {
  overflow: visible;
}

.v-form-field.v-customcomponent.text-and-content {
    width: auto !important;
}

.v-form-field-label {
    text-align: right;
    width: 140px;
    margin-right: 12px;
    color: $c10;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    vertical-align: top; /*needed by FF*/
    line-height:25px;
    position: absolute;
}

.v-form-field-container {
  margin-top: 1px;
  padding-right: 40px;
  padding-left: 150px;
  display: block;
}

.validation-hilight {
    border: 2px solid $c70;
    padding: 3px 0px;
    background-color: white;
}

.v-form-field-section {
    color: $c90;
    margin-bottom: 11px;
}

.validation-message-inline,.help-message-inline {
    margin-bottom: 10px;
    padding-top: 5px;
    position: relative;
}

/*vaadin delivers error message in html form - here we make sure it is at least inlined*/
.validation-message-inline span > div {
  display: inline-block;
}

.validation-message,.help-message {
    background: none repeat scroll 0px 0px $c70;
    color: white;
    display: block;
    padding: 10px;
}

.help-message {
    background: none repeat scroll 0px 0px $c24;
    color: black;
}

.help-message span {
    vertical-align: middle;
    margin-left: 3px;
}

.triangle.red path {
    fill: $c70;
}

.triangle.blue path {
    fill: $c24;
}

.triangle {
    text-align: center;
}

.icon-error-white {
    background: url("img/icons/icon-error-white.png") no-repeat scroll 1px 1px transparent;
    border: medium none;
    display: inline-block;
    height: 20px;
    margin: 0px 6px 0px 0px;
    padding: 1px;
    vertical-align: middle;
    width: 20px;
}

.action-jump-to-next-error {
    -moz-user-select: text;
    background: none repeat scroll 0% 0% transparent;
    border: medium none;
    color: $c12 !important;
    display: inline-block;
    margin-left: 10px;
    cursor: pointer;
}

.action-jump-to-next-error:hover {
    color: $c80 ! important;
}

.action-jump-to-next-error:focus {
    outline-offset: -3px;
}

.action-validation {
    background: url("img/icons/icon-error-red.png") no-repeat scroll 1px 1px transparent;
    border: medium none;
    display: inline;
    height: 18px;
    margin: 3px 1px 0 2px;
    position: absolute;
    vertical-align: middle;
    width: 20px;
}

.action-form-help {
    background: url("img/icons/icon-help.png") no-repeat scroll 1px 1px transparent;
    border: medium none;
    display: inline-block;
    height: 20px;
    margin: 3px 1px 0 2px;
    padding: 0;
    position: absolute;
    vertical-align: middle;
    width: 20px;
}

fieldset {
    border: 0px none;
    padding: 0;
}

.form-content .v-form-layout > fieldset {
	& > legend {
    font-family: Verdana, Arial, sans-serif;
    font-size: 12px;
    font-weight: bold;
    color: black;
    padding-left: 27px;
    padding-bottom: 18px;
    display: none;
  }

  & > hr {
    margin: 22px 24px 0px;
    border-top: 1px solid black;
    border-bottom: 0px;
    border-right: 0px;
    border-left: 0px;
    height: 0; /*needed by FF*/
    display: none;
  }
}

.form-content .show-all .v-form-layout > fieldset {
	& > legend, & > hr {
    display: block;
  }
}

.form-content .v-shell-tab:last-child .v-form-layout > fieldset > hr {
  display: none;
}


/*do not display hr on under last tab when in show-all mode*/
.v-shell-tab:last-child fieldset hr {
    display: none !important;
}

.v-form-field-container .v-datefield-button {
    margin: 2px 0 0 3px;
}

.v-form-field-label span.requiredfield,
.v-required-field-indicator {
  color: $c90;
  font-size: 18px;
  vertical-align: -20%;
  margin-left: 3px;
}

/*
* styles for rendering views of the form
*/


.field-view .v-caption {
  display: inline-block;
  color: $c10;
  line-height: 25px;
  margin-right: 12px;
  overflow: hidden;
  text-align: right;
  text-overflow: ellipsis;
  vertical-align: top;
  width: 140px;
}

.field-view .v-label {
  padding-top: 3px;
  white-space: normal;
  vertical-align: middle;
  width: 410px;
}

.richtextfield-disabled:after {
  content: 'Rich text editing is currently disabled on touch devices.';
  font-family: Verdana, Helvetica, sans-serif !important;
  font-size: 12px;
  display: block;
  padding-top: 6px;
  font-weight: bold;
  text-align: center;
}

.textarea-stretcher {
  cursor: pointer;
  display: inline-block;
  color: #666666;
  font-size: 14px;
  line-height: 1;
  width: 1em;
  height: 1em;
}

.textarea-stretcher:hover,
.textarea-stretcher:focus,
.textarea-stretcher:active {
  opacity: 0.6;
}

.textarea-stretcher.stretched {
  position: absolute;
  right: 10px;
  top: 45px;
  z-index: 3;
}

.textarea-stretcher.stretched.rich-text {
  right: 5px;
  top: 47px;
}

.textarea-stretcher.collapsed {
  position: relative;
  vertical-align: top;
  margin-right: -15px;
  right: 16px;
  top: 2px;
}

.v-magnolia-form.textarea-stretched .v-shell-tabsheet-tab-wrapper {
  position: static;
}

.v-magnolia-form.textarea-stretched .v-form-field-label {
  display: none;
}

.switchablefield {
  & > .v-verticallayout > .v-spacing {
    height: 2px;
  }
  padding-bottom: 4px;
}

}

